# AssemblyJam

./: CMakeLists.txt  readme.md
Game/: CMakeLists.txt
SM/: CMakeLists.txt
SM/src/: GameManager.cpp
SM/src/Common/: BSPTree.cpp  Common.cpp  Common.hpp  InputEngine.cpp  InputMapping.hpp  Utils.hpp
SM/src/Graphics/: GameRenderer.cpp  GameRenderer.hpp  Window.cpp
SM/src/World/: Bullet.cpp  Camera.cpp  Camera.hpp  Object.hpp  Player.cpp  Scene.cpp
SM/src/linavg/Backends/GL/: GLBackend.cpp
SM/src/linavg/Core/: Common.cpp  Math.cpp  Renderer.cpp  Text.cpp
SchoolMassage/: CMakeLists.txt
SchoolMassage/src/: Application.cpp  Application.hpp  GameManager.cpp  GameManager.hpp  Main.cpp
SchoolMassage/src/Common/: BSPTree.cpp  BSPTree.hpp  Common.hpp  DataStructures.hpp  InputEngine.cpp  InputEngine.hpp  Utils.cpp  Utils.hpp
SchoolMassage/src/Graphics/: Backend.cpp  Backend.hpp  GameRenderer.cpp  GameRenderer.hpp  Window.cpp  Window.hpp
SchoolMassage/src/World/: Bullet.hpp  Camera.cpp  Camera.hpp  MainScene.cpp  MainScene.hpp  Object.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  Tilemap.cpp  Tilemap.hpp
SchoolMassage/src/glad/: glad.c
SchoolMassage/src/linavg/Backends/GL/: GLBackend.cpp
SchoolMassage/src/linavg/Core/: Backend.cpp  Drawer.cpp  Renderer.cpp
SchoolMassage/src/linavg/Utility/: Utility.cpp
_Resources/Resources/: map.txt
glad/include/: glad.c
src/Backends/GL/: GLBackend.cpp
